# buddy

./: .gitignore  README.md  WORKING.md  buddy.bat  buddy.sh  pyproject.toml  setup.bat  setup.sh
.github/workflows/: check-build-linux.yml  check-build.yml
ascii_play/: __init__.py  __main__.py  cli.py  resize.py
