[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "ascii_play"
version         = "0.1.0"
description     = "Live terminal video player with true 24-bit color rendering"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.scripts]
ascii_play = "ascii_play.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ascii_play*"] 